--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -10,10 +10,32 @@
                 <ul>                        
                         <li class="upcoming-event">
                             <div class="timeline-content upcoming-event">
+                                <h4 class="heading-4"><a href="/studinter-jayyagnik">Competitive coding boot camp</a></h4>
+                                <p class="timeline-time"><a href="/studinter-jayyagnik">TBA</a></p>
+                            </div>
+                        </li>
+
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
+                                <h4 class="heading-4"><a>Mixer for incoming students </a></h4>
+                                <p class="timeline-time"><a >17-08-2022</a></p>
+                            </div>
+                        </li>
+
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
+                                <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk - Prof. R. Ramanujam</a></h4>
+                                <p class="timeline-time"><a href="/invitedtalk-manishgupta">17-06-2022</a></p>
+                            </div>
+                        </li>
+
+                        <li class="completed-event">
+                            <div class="timeline-content upcoming-event">
                                 <h4 class="heading-4"><a href="/studinter-jayyagnik">Student Interaction with Jay Yagnik</a></h4>
                                 <p class="timeline-time"><a href="/studinter-jayyagnik">04-12-2019</a></p>
                             </div>
                         </li>
+                        
                         <li class="completed-event">
                             <div class="timeline-content completed-event">
                                 <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk - Dr. Manish Gupta</a></h4>
@@ -31,7 +53,8 @@
                                 <h4 class="heading-4">Chapter Started</h4>
                                 <p class="timeline-time">26-03-2019</p>
                             </div>
-                        </li>                   
+                        </li>  
+                                         
                 </ul>
             </div>
         </div>
