--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -10,8 +10,8 @@
                 <ul>                        
                         <li class="upcoming-event">
                             <div class="timeline-content upcoming-event">
-                                <h4 class="heading-4"><a href="/studinter-jayyagnik">Competitive coding boot camp</a></h4>
-                                <p class="timeline-time"><a href="/studinter-jayyagnik">TBA</a></p>
+                                <h4 class="heading-4"><a>Competitive coding boot camp</a></h4>
+                                <p class="timeline-time"><a>TBA</a></p>
                             </div>
                         </li>
 
@@ -24,18 +24,18 @@
 
                         <li class="completed-event">
                             <div class="timeline-content completed-event">
-                                <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk - Prof. R. Ramanujam</a></h4>
-                                <p class="timeline-time"><a href="/invitedtalk-manishgupta">17-06-2022</a></p>
+                                <h4 class="heading-4"><a >Invited Talk - Prof. R. Ramanujam</a></h4>
+                                <p class="timeline-time"><a>17-06-2022</a></p>
                             </div>
                         </li>
 
                         <li class="completed-event">
-                            <div class="timeline-content upcoming-event">
+                            <div class="timeline-content completed-event">
                                 <h4 class="heading-4"><a href="/studinter-jayyagnik">Student Interaction with Jay Yagnik</a></h4>
                                 <p class="timeline-time"><a href="/studinter-jayyagnik">04-12-2019</a></p>
                             </div>
                         </li>
-                        
+
                         <li class="completed-event">
                             <div class="timeline-content completed-event">
                                 <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk - Dr. Manish Gupta</a></h4>
